# kernel_device_samsung_A56x

./: README.md
device/erd/erd8855/: 16k_dtboimg.cfg  BUILD.bazel  Kconfig.ext  Kconfig.ext_modules  Makefile.include  build.config.erd8855_16k_v  build.config.erd8855_emul_v  build.config.erd8855_v  device.bazelrc  dtboimg.cfg  emul_dtboimg.cfg  modules.bzl  vendor_ramdisk.cfg
device/erd/erd9945/: 16k_dtboimg.cfg  BUILD.bazel  Kconfig.ext_modules  Makefile.include  build.config.erd9945_16k_v  build.config.erd9945_v  device.bazelrc  dtboimg.cfg  modules.bzl  vendor_ramdisk.cfg
device/erd/erd9955/: 16k_dtboimg.cfg  BUILD.bazel  Kbuild  Kconfig.ext_modules  Makefile  Makefile.include  build.config.erd9955_16k_v  build.config.erd9955_emul_v  build.config.erd9955_v  device.bazelrc  dtboimg.cfg  emul_dtboimg.cfg  modules.bzl  vendor_ramdisk.cfg
device/mx/mx8855/: .Kbuild.lego.updated  .Kconfig.ext.lego.updated  .lego_dtbo_list  .legofile  BUILD.bazel  Kbuild  Kconfig.ext  Kconfig.ext_modules  Makefile  Makefile.include  a56x_modules.bzl  build.config.mx8855_16k_v  build.config.mx8855_emul_v  build.config.mx8855_v  device.bazelrc  emul_dtboimg.cfg  gts10fep_modules.bzl  gts10fewifi_modules.bzl  lego.bzl  lego_dtbo  lego_module  lego_module_second  modules.bzl  vendor_dlkm_props  vendor_ramdisk.cfg
device/mx/mx8855/block/: Makefile  blk-sec-common.c
external-modules/camera/: BUILD.bazel  Kbuild  Kconfig  Makefile.include  a56x_modules.bzl  gts10fep_modules.bzl  modules.bzl  s5e8855_modules.bzl  s5e9955_modules.bzl
external-modules/camera/camera/: Kconfig  Makefile  is-core.c  is-core.h  is-device-camif-dma.c  is-device-csi.h  is-device-csi_v4.c  is-device-ischain.c  is-device-sensor.h  is-device-sensor_v2.c  is-devicemgr.c  is-devicemgr.h  is-dt.c  is-dt.h  is-groupmgr.c  is-groupmgr.h  is-interface-wrap.c  is-ixc-config.c  is-resourcemgr.c  is-resourcemgr.h  is-subdev-ctrl.h  is-time.c  pablo-crta-bufmgr.c  pablo-crta-bufmgr.h  pablo-device-camif-subblks.c  pablo-device-camif-subblks.h  pablo-stream-sysfs.c  pablo-video.c
external-modules/camera/camera/csi/: is-hw-csi-v5_20.c  is-hw-csi-v5_20.h  is-hw-csi-v5_3.c  is-hw-csi-v5_4.c  is-hw-csi-v5_4.h  is-hw-csi-v5_4_8.h  is-hw-csi-v6_0.c  is-hw-csi-v6_0.h  is-hw-csi-v8_0.c  is-hw-csi-v8_0.h  is-hw-csi-v8_1.c  is-hw-csi-v8_1.h  is-hw-phy.c
external-modules/camera/camera/hardware/: Makefile  is-hw-3aa-v2.c  is-hw-3aa.c  is-hw-byrp-v2.c  is-hw-byrp.c  is-hw-control-m2m.c  is-hw-control.c  is-hw-control.h  is-hw-cstat-v2.c  is-hw-cstat.c  is-hw-isp-v2.c  is-hw-isp.c  is-hw-lme-v2.c  is-hw-lme-v3.c  is-hw-lme.c  is-hw-mcfp-v2.c  is-hw-mcfp.c  is-hw-mcscaler-v3.c  is-hw-mcscaler-v4.c  is-hw-orbmch.c  is-hw-param-debug.c  is-hw-param-debug.h  is-hw-pdp.c  is-hw-rgbp-v2.c  is-hw-rgbp.c  is-hw-shrp-v1.c  is-hw-vra-v2.c  is-hw-vra.c  is-hw-yuvp-v1_1.c  is-hw-yuvp-v2.c  is-hw-yuvp-v3.c  is-hw-yuvpp.c  pablo-hw-byrp-v3.c  pablo-hw-common-ctrl.c  pablo-hw-cstat.c  pablo-hw-dlfe.c  pablo-hw-helper-v2.c  pablo-hw-mcsc-v5.c  pablo-hw-mlsc.c  pablo-hw-msnr.c  (+5 more)
external-modules/camera/camera/icpu/: Makefile  pablo-icpu-core.c  pablo-icpu-core.h  pablo-icpu-debug.c  pablo-icpu-debug.h  pablo-icpu-itf.c  pablo-icpu-selftest.c  pablo-icpu-selftest.h
external-modules/camera/camera/include/: exynos-is-module.h  exynos-is-sensor.h  exynos-is.h  is-common-config.h  is-common-enum.h  is-device-sensor-peri.h  is-err.h  is-helper-ixc.h  is-hw-api-csi.h  is-hw-phy.h  is-hw-settle-4nm-lpp-dcphy6410.h  is-hw.h  is-interface-sensor.h  is-type.h  is-vendor-interface.h  is-vendor.h  is-video.h  leds  pablo-crta-cmd-interface.h  pablo-csi-link_v4_1.h  pablo-csi-link_v5_1.h  pablo-csi-link_v5_3.h  pablo-csi-link_v6_1.h  pablo-csi-link_v7_1.h  pablo-csi-link_v7_2.h  pablo-debug-param.h  pablo-debug.h  pablo-dvfs.h  pablo-fpsimd.h  pablo-framemgr.h  pablo-hw-chain-info.h  pablo-hw-settle-3nm-gap.h  pablo-init.h  pablo-internal-subdev-ctrl.h  pablo-kernel-api-wrap.h  pablo-kernel-variant.h  pablo-mem.h  pablo-mmio.h  pablo-phy-reg_v1.h  pablo-phy-reg_v2.h  (+5 more)
external-modules/camera/camera/interface/: is-interface-ddk.c  is-interface-ischain.c  is-interface-ischain.h  is-interface-library.c  is-interface-library.h  pablo-icpu-adapter-v2.c  pablo-icpu-adapter.h  pablo-interface-irta.c  pablo-sensor-adapter-v1.c
external-modules/camera/camera/ischain/: setup-is-module.c
external-modules/camera/camera/lib/: Makefile  pablo-debug.c  pablo-device-llcaid.c  pablo-device-llcaid.h  pablo-dvfs.c  pablo-fpsimd.c  pablo-framemgr.c  pablo-init.c  pablo-internal-subdev-ctrl.c  pablo-json.c  pablo-kernel-api-wrap.c  pablo-kernel-variant.c  pablo-lib.c  pablo-mem.c  pablo-mmio.c  (+5 more)
external-modules/sec_input/sec_input/: BUILD.bazel  sec_cmd.c  sec_input.c  sec_input.h
external-modules/sgpu/: BUILD.bazel  Kbuild  Kconfig  Makefile
external-modules/sgpu/include/: amd_shared.h
external-modules/sgpu/pm/: amdgpu_pm.c
external-modules/sgpu/sgpu/: Kconfig  Makefile  amdgpu.h  amdgpu_bo_list.c  amdgpu_bo_list.h  amdgpu_cs.c  amdgpu_cs.h  amdgpu_csa.c  amdgpu_csa.h  amdgpu_ctx.c  amdgpu_ctx.h  amdgpu_ctx_priv.h  amdgpu_cwsr.c  amdgpu_cwsr.h  amdgpu_debugfs.c  amdgpu_debugfs.h  amdgpu_device.c  amdgpu_discovery.h  amdgpu_dma_buf.c  amdgpu_doorbell.h  amdgpu_drv.c  amdgpu_encoders.c  amdgpu_fdinfo.c  amdgpu_fdinfo.h  amdgpu_fence.c  amdgpu_gart.c  amdgpu_gart.h  amdgpu_gds.h  amdgpu_gem.c  amdgpu_gem.h  amdgpu_gfx.c  amdgpu_gfx.h  amdgpu_gfxhub.h  amdgpu_gmc.c  amdgpu_gmc.h  amdgpu_gtt_mgr.c  amdgpu_ib.c  amdgpu_ids.c  amdgpu_ids.h  amdgpu_ih.c  (+107 more)
external-modules/sgpu/test/: Kconfig  Makefile  sgpu_exynos_basic_test.c
soc-series/common/: BUILD.bazel  bazel.WORKSPACE
soc-series/common/impl/: BUILD.bazel  check_module_list.bzl  create_blocklist.bzl  create_modules_graph.py  custom_module_order.bzl  dtbo.bzl  dtbo_cfg.bzl  file_contexts  vendor_ramdisk.bzl
soc-series/s-android15/: BUILD.bazel  Kbuild  Kconfig.ext  Makefile.include  build.config.s5e8855_v  build.config.s5e9945_v  build.config.s5e9955_v  device.bazelrc  s5e8855_modules.bzl  s5e9945_modules.bzl  s5e9955_modules.bzl
(+3213 files in other folders)
